--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import Header from "../components/Header.astro";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,15 +12,27 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<Header	/>
 		<slot />
 	</body>
 </html>
 
 <style>
-	html,
+	:root {
+		color-scheme: light dark;
+	}
+
+	html{
+		font-family: system-ui, sans-serif;
+	}
+
 	body {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+		display: flex;
+		justify-content: center;
+		background-color: #050505;
+		min-height: 100vh;
 	}
 </style>
