Homepage styles and icons

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
-<header class="flex justify-between items-center py-3 w-[1120px]">
-    <img class="rounded-full w-24 h-24" src="/src/assets/logo.png" alt="Logo" />
+<header class="flex justify-between items-center py-5 w-[1120px] mx-auto">
+    <img class="rounded-full w-32 h-32" src="/src/assets/aldane.png" alt="Logo" />
 
-    <nav class="flex  ">
+    <nav>
         <ul class="flex flex-row gap-x-10 list-none opacity-80">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
