--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,20 +1,33 @@
 ---
 import Header from "../components/Header.astro";
+import '@fontsource-variable/nunito';
+
+interface Props {
+	title: string;
+	description: string;
+}
+
+const { title, description } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
+
 	<body>
+		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
+
 		<Header	/>
 		<slot />
 	</body>
+
 </html>
 
 <style>
@@ -23,7 +36,7 @@ import Header from "../components/Header.astro";
 	}
 
 	html{
-		font-family: system-ui, sans-serif;
+		font-family: 'Nunito Variable', system-ui, sans-serif;
 	}
 
 	body {
@@ -31,7 +44,7 @@ import Header from "../components/Header.astro";
 		width: 100%;
 		height: 100%;
 		display: flex;
-		justify-content: center;
+		flex-direction: column;
 		background-color: #050505;
 		min-height: 100vh;
 	}
