--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,48 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Badge from '../components/Badge.astro';
+import GitHubIcon from '../components/icons/GitHub.astro';
+import MailIcon from '../components/icons/Mail.astro';
+
+import Social from '../components/Social.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
+<Layout title="Aldane's portfolio - Full Stack Developer" description="">
 	<main>
+		<section class="w-full lg:w-[740px] mx-auto py-44">
+			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-2 pb-10">Hey, I'm Aldane 
+				<div class="flex justify-center items-center">
+					<a href="mailto:contact@aldane.net" class="flex justify-center items-center"> 
+						<Badge>Ready to work</Badge>
+					</a>
+				</h1>
+			</div>
+			<h2 class="text-2xl text-wrap">
+				<span class="text-yellow-200/90">Computer Engineer and Full Stack Developer</span> from Madrid, Spain 🇪🇸. Specialised in microservices development.
+			</h2>
+
+			<nav>
+				<ul class="flex gap-x-4 mt-6">
+					<li>
+						<Social href="https://github.com/AldaneTech">
+							<GitHubIcon class="w-6 h-6"/>
+							GitHub
+						</Social>
+					</li>
+
+					<li>
+						<Social href="mailto:contact@aldane.net">
+							<MailIcon class="w-6 h-6"/>
+							Contact me
+						</Social>
+					</li>
+				</ul>
+			</nav>
+
+		</section>
+
 	</main>
 </Layout>
