Experience component and responsive header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,11 @@
-<header class="flex justify-between items-center py-5 w-[1120px] mx-auto">
+<header class="flex flex-col items-center py-5 w-full xl:w-[1120px] mx-auto md:flex-row md:justify-between">
     <img class="rounded-full w-32 h-32" src="/src/assets/aldane.png" alt="Logo" />
-
-    <nav>
+    <nav class="w-full flex justify-center md:w-auto md:justify-start">
         <ul class="flex flex-row gap-x-10 list-none opacity-80">
-            <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/projects">Projects</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="#top">Home</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">About me</a></li>
         </ul>
     </nav>
 </header>
