--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
 import '@fontsource-variable/nunito';
 
 interface Props {
@@ -21,11 +23,12 @@ const { title, description } = Astro.props;
 		<title>{title}</title>
 	</head>
 
-	<body>
+	<body class="bg-neutral-950">
 		<div class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
 
 		<Header	/>
 		<slot />
+		<Footer />
 	</body>
 
 </html>
@@ -37,6 +40,7 @@ const { title, description } = Astro.props;
 
 	html{
 		font-family: 'Nunito Variable', system-ui, sans-serif;
+		scroll-behavior: smooth;
 	}
 
 	body {
@@ -47,5 +51,11 @@ const { title, description } = Astro.props;
 		flex-direction: column;
 		background-color: #050505;
 		min-height: 100vh;
+	}
+
+	@media (prefers-reduced-motion: reduce){
+		html {
+			scroll-behavior: auto;
+		}
 	}
 </style>
