--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,13 @@
 ---
 import Badge from '../components/Badge.astro';
+import Experience from '../components/Experience.astro';
 import GitHubIcon from '../components/icons/GitHub.astro';
 import MailIcon from '../components/icons/Mail.astro';
 
 import Social from '../components/Social.astro';
 import Layout from '../layouts/Layout.astro';
+import SectionContainer from '../components/SectionContainer.astro';
+import Briefcase from '../components/icons/Briefcase.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -12,8 +15,8 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout title="Aldane's portfolio - Full Stack Developer" description="">
 	<main>
-		<section class="w-full lg:w-[740px] mx-auto py-44">
-			<h1 class="text-white text-5xl font-bold flex flex-row gap-x-2 pb-10">Hey, I'm Aldane 
+		<SectionContainer class="py-40 pb-24">
+			<h1 class="text-white text-2xl lg:text-5xl font-bold flex flex-row gap-x-2 pb-10">Hey, I'm Aldane 
 				<div class="flex justify-center items-center">
 					<a href="mailto:contact@aldane.net" class="flex justify-center items-center"> 
 						<Badge>Ready to work</Badge>
@@ -42,7 +45,15 @@ import Layout from '../layouts/Layout.astro';
 				</ul>
 			</nav>
 
-		</section>
+		</SectionContainer>
+
+		<SectionContainer id="experience">
+			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+				<Briefcase class="size-7"/>
+				Work experience
+			</h2>
+			<Experience />
+		</SectionContainer>
 
 	</main>
 </Layout>
