--- a/src/components/SectionContainer.astro
+++ b/src/components/SectionContainer.astro
@@ -1,3 +1,7 @@
-<section id={`${Astro.props.id}`} class={`w-full lg:w-[740px] mx-auto pb-24 ${Astro.props.class}`}>
-    <slot />
+---
+const { class: className, id } = Astro.props
+---
+
+<section id={id} data-section={id} class={`section ${className} scroll-m-20 w-full mx-auto container lg:max-w-4xl md:max-w-2xl`}>
+  <slot />
 </section>
