Styles and more info

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,21 +5,21 @@ const EXPERIENCE = [
     {
         date: "April 2023 - Current",
         title: "Full Stack Developer",
-        description: "TODO",
+        description: "Participation in the modernization of the Dirección General de Tráfico (DGT) included migrating its road control system from a desktop application to a web-based solution, improving efficiency and scalability. Currently involved in the implementation of an advanced control system for railway stations across Catalonia, contributing to backend development with a robust microservices architecture using Java, Spring, ActiveMQ, Redis, PostgreSQL (JPA), and Keycloak. Frontend development focuses on building responsive and user-friendly interfaces with Angular. Additionally, experience includes DevOps workflows, managing CI/CD pipelines with Jenkins, validating code quality with SonarQube, and deploying applications in Docker containers to ensure scalability and reliability.",
         company: "Indra Systems",
-        link: "#",
+        link: "",
     },
     {
         date: "July 2022 - March 2023",
         title: "Software Developer",
         company: "Clever Shopping Group",
-        description: "I developed automated solutions to integrate the product offering in multiple sales channels such as Amazon, PCComponents and Carrefour (using C# for communication with APIs and SQL Server to read and update our catalog). In addition, we host the applications on AWS to ensure scalability and security.",
+        description: "We created automated solutions to seamlessly integrate product offerings across multiple sales channels, including Amazon, PCComponents, and Carrefour. This involved developing robust communication systems using C# for API interactions and managing the product catalog with SQL Server for efficient data retrieval and updates. Additionally, I deployed these applications on AWS, ensuring high scalability, reliability, and security to support business growth and adaptability.",
     },
     {
         date: "February 2022 - May 2022",
         title: "Web Developer",
         company: "IOTsens",
-        description: "In this company I did my final degree work developing a web application to display data collected by IoT devices. I used PHP and PostgreSQL to implement the solution, focusing on designing an efficient and accessible web interface for users. You can find the final project here.",
+        description: "As part of my final degree project, I developed a web application designed to display data collected by IoT devices. The solution was implemented using PHP and PostgreSQL, with a strong emphasis on creating an efficient and user-friendly interface. You can explore the final project here.",
         link: "#iotsens"
     },
 ]
