--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const currentYear = new Date().getFullYear()
             <a id="home" href="#top" class="hover:underline">Home</a>
         </li>
       <li class="ml-4">
-        <a id="contact" href="mailto:contact@aldane.net" class="hover:underline">Contacto</a>
+        <a id="contact" href="mailto:contact@aldane.net" class="hover:underline">Contact</a>
       </li>
       <li class="ml-4">
         <img src="/src/assets/logo.webp" class="w-16 h-4"/>
