--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -28,7 +28,7 @@ const TAGS = {
 
 const PROJECTS = [
     {
-        title: "Smart Cities - Web platform with real-time data",
+        title: "Smart Cities - Web platform with real-time data - IoT",
         description: "Platform designed to provide important information obtained from IoT devices, facilitating decision making in urban environments.",
         link: "",
         info: "https://www.iotsens.com/en/city/",
