--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -5,11 +5,12 @@ import Badge from '../components/Badge.astro';
 import GitHubIcon from '../components/icons/GitHub.astro';
 import MailIcon from '../components/icons/Mail.astro';
 import Social from '../components/Social.astro';
+import aldaneWebp from '../assets/aldane.webp';
 ---
 
 <div class="max-w-xl">
   <div class="flex gap-4 mb-4">
-    <img class="rounded-full shadow-lg size-16" src="/src/assets/aldane.webp" alt={personalImageAlt}/>
+    <img class="rounded-full shadow-lg size-16" src={aldaneWebp.src} alt={personalImageAlt}/>
     <a href="mailto:contact@aldane.net" class="flex items-center transition md:justify-center md:hover:scale-105">
       <Badge>Open to work</Badge>
     </a>
