--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,6 +7,7 @@ import LinkButton from "./LinkButton.astro"
 import Link from "./icons/Link.astro"
 import Document from "./icons/Document.astro"
 import Tex from "./icons/Tex.astro"
+import imageSrc from '/src/assets/iotsens.webp';
 
 const TAGS = {
     PHP: {
@@ -33,7 +34,8 @@ const PROJECTS = [
         link: "",
         info: "https://www.iotsens.com/en/city/",
         github:"",
-        image: "/src/assets/iotsens.webp",
+        image: imageSrc.src,
+        alt: "Smart Cities - Web platform with real-time data - IoT",
         documentation: "/documents/tfg.pdf",
         tags: [TAGS.PHP, TAGS.PostgreSQL, TAGS.Tex],
         id: "iotsens",
@@ -43,11 +45,11 @@ const PROJECTS = [
 
 <div class="flex flex-col gap-y-16">
     {
-      PROJECTS.map(({ id, image, title, description, tags, link, info, github, documentation }) => (
+      PROJECTS.map(({ id, image, alt, title, description, tags, link, info, github, documentation }) => (
         <article class="flex flex-col space-x-0 space-y-8 group md:flex-row md:space-x-8 md:space-y-0" id={id}>
           <div class="w-full md:w-1/2">
             <div class="relative flex flex-col items-center col-span-6 row-span-5 gap-8 transition duration-500 ease-in-out transform shadow-xl overflow-clip rounded-xl sm:rounded-xl md:group-hover:-translate-y-1 md:group-hover:shadow-2xl lg:border lg:border-gray-800 lg:hover:border-gray-700 lg:hover:bg-gray-800/50">
-              <img alt="Recién llegado vs 5 años en Nueva Zelanda" class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
+              <img alt={alt} class="object-cover object-top w-full h-56 transition duration-500 sm:h-full md:scale-110 md:group-hover:scale-105" loading="lazy" src={image} />
             </div>
           </div>
     
