--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,6 @@
 ---
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-
 import '@fontsource-variable/nunito';
 
 interface Props {
@@ -18,7 +17,7 @@ const { title, description } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/svg+xml" href={`${import.meta.env.BASE_URL}favicon-32x32.png`} />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
