Fix  image path for base URL compatibility

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,5 @@
 ---
+import logo from '../assets/logo.webp'
 const currentYear = new Date().getFullYear()
 ---
 
@@ -16,7 +17,7 @@ const currentYear = new Date().getFullYear()
         <a id="contact" href="mailto:contact@aldane.net" class="hover:underline">Contact</a>
       </li>
       <li class="ml-4">
-        <img src="/src/assets/logo.webp" class="w-16 h-4"/>
+        <img src={logo.src} alt="Aldane's logo" class="w-16 h-4"/>
       </li>
     </ul>
   </div>
