--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,26 +33,26 @@ import Bag from '../components/icons/Bag.astro';
 			</SectionContainer>
 
 			<SectionContainer id="projects">
-				<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+				<TitleSection>
 					<Code class="size-7"/>
 					Projects
-				</h2>
+				</TitleSection>
 				<Projects />
 			</SectionContainer>
 
 			<SectionContainer id="education">
-				<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+				<TitleSection>
 					<Bag class="size-8"/>
 					Education
-				</h2>
+				</TitleSection>
 				<Education />
 			</SectionContainer>
 
 			<SectionContainer id="about">
-				<h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
+				<TitleSection>
 					<ProfileCheck class="size-8"/>
 					About me
-				</h2>
+				</TitleSection>
 				<AboutMe />
 			</SectionContainer>
 		</div>
