Commented out code in about for future improvements

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,11 +17,12 @@ const navItems = [
     label: "education",
     url: "/#education",
   },
-  {
-    title: "About me",
-    label: "about",
-    url: "/#about",
-  },
+
+//  {
+//    title: "About me",
+//    label: "about",
+//   url: "/#about",
+// },
   {
     title: "Contact",
     label: "contact",
