--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -92,7 +92,7 @@ const PROJECTS = [
               {title}
             </h3>
             <div class="flex flex-wrap mt-2">
-              <ul class="flex flex-row mb-2 gap-x-2">
+              <ul class="flex flex-wrap flex-row mb-2 gap-2">
                   {tags.map((tag) => (
                     <li>
                       <span
@@ -106,7 +106,7 @@ const PROJECTS = [
                 </ul>
         
               <div class="mt-2 text-gray-700 dark:text-gray-400">{description}</div>
-              <footer class="flex items-end justify-start mt-4 gap-x-4">
+              <footer class="flex flex-wrap items-end justify-start mt-4 gap-4">
                   {github && (
                     <LinkButton href={github}>
                       <GitHub class="size-6" />
