--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -1,3 +1,3 @@
-<a class="rounded-full border flex justify-center items-center gap-x-2 py-1 px-2 text-cs md:text-base md:py-2 md:px-4 border-black/40 bg-gray-100 hover:bg-gray-800 hover:border-gray-900 hover:text-white dark:border-white/20 dark:bg-white/70 dark:hover:bg-white/30 hover:scale-110  transition " href={Astro.props.href} target="_blank" rel="noopener noreferrer">
+<a class="rounded-full border flex justify-center items-center gap-x-2 py-1 px-2 text-black text-cs md:text-base md:py-2 md:px-4 border-black/40 bg-gray-100 hover:bg-gray-800 hover:border-gray-900 hover:text-white dark:border-white/20 dark:bg-white/70 dark:hover:bg-white/30 hover:scale-110  transition " href={Astro.props.href} target="_blank" rel="noopener noreferrer">
     <slot />
 </a>
