update project and experience information

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -5,9 +5,9 @@ const EXPERIENCE = [
     {
         date: "April 2023 - Current",
         title: "Full Stack Developer",
-        description: "Participation in the modernization of the Dirección General de Tráfico (DGT) included migrating its road control system from a desktop application to a web-based solution, improving efficiency and scalability. Currently involved in the implementation of an advanced control system for railway stations across Catalonia, contributing to backend development with a robust microservices architecture using Java, Spring, ActiveMQ, Redis, PostgreSQL (JPA), and Keycloak. Frontend development focuses on building responsive and user-friendly interfaces with Angular. Additionally, experience includes DevOps workflows, managing CI/CD pipelines with Jenkins, validating code quality with SonarQube, and deploying applications in Docker containers to ensure scalability and reliability.",
+        description: "I contribute to the modernization of the Directorate-General for Traffic (DGT) by migrating its road control system (SCADA) from a desktop application to a web-based solution, improving efficiency and scalability. \nI have developed microservices from scratch, starting from defining the OpenAPI specification to implementing the service itself within a robust microservices architecture using Java, Spring, ActiveMQ, Redis, PostgreSQL (JPA), and Keycloak. On the client side, I have worked on GUI design based on client requirements and implemented it using Angular. \nAdditionally, I work with DevOps workflows, manage CI/CD pipelines with Jenkins, ensure code quality with SonarQube, and deploy applications in Docker containers to ensure scalability and reliability in production environments.",
         company: "Indra Systems",
-        link: "",
+        link: "#dgt",
     },
     {
         date: "July 2022 - March 2023",
@@ -18,7 +18,7 @@ const EXPERIENCE = [
     {
         date: "February 2022 - May 2022",
         title: "Web Developer",
-        company: "IOTsens",
+        company: "IoTsens",
         description: "As part of my final degree project, I developed a web application designed to display data collected by IoT devices. The solution was implemented using PHP and PostgreSQL, with a strong emphasis on creating an efficient and user-friendly interface. You can explore the final project here.",
         link: "#iotsens"
     },
