--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -24,7 +24,9 @@ const { title, company, description, link, date } = Astro.props
     </div>
   </div>
   <div class="relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-300 md:col-span-3">
-    {description}
+    {description.split("\n").map((paragraph) => (
+        <p>{paragraph}</p>
+    ))}
     {
       link && (
         <LinkInline href={link}>
