Fix text color in light theme

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ const currentYear = new Date().getFullYear()
       >© {currentYear}
       <a href="https://aldane.net/" class="hover:underline">ALDANE</a>
     </span>
-    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0">
+    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-black dark:text-white/90 sm:mt-0">
         <li>
             <a id="home" href="#top" class="hover:underline">Home</a>
         </li>
